--- a/index.htm
+++ b/index.htm
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="An awesome single page portfolio html template. You can easily design your portfolio website using this template.">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Portfolio Website</title>
+    <title>Portfolio Website Template</title>
     <link rel="shortcut icon" href="/assets/images/Flag.png" type="image/x-icon">
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Titillium+Web:300,400,600,700" rel="stylesheet">
