--- a/index.htm
+++ b/index.htm
@@ -25,7 +25,7 @@
         <nav>
             <div class="row">
                 <a href="#home">
-                    <img src="assets/images/logo.png" alt="shahnewaz" class="logo">
+                    <img src="assets/images/logo-2.png" alt="shahnewaz" class="logo">
                 </a>    
                 <ul class="main-nav">
                     <li class="active"><a href="#home">home</a></li>
@@ -348,6 +348,10 @@
                 <li><a href="#">Dribble</a></li>
                 <li><a href="#">GitHub</a></li>
             </ul>
+        </div>
+
+        <div>
+            <p style="padding-top: 21px;color: #c39d55;">This website is made by &copy; Muhammad shahnewaz</p>
         </div>
     </footer>
 
