Updated team section

--- a/index.htm
+++ b/index.htm
@@ -111,7 +111,7 @@
             <div class="col span_1_of_4 box">
                 <img src="/assets/images/aaa12.png" alt="newaz" class="team-member">
                 <h3>SHAHNEWAZ</h3>
-                <span class="role">CEO / Marketing Guru</span>
+                <span class="role">Front-end Developer</span>
                 <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes.</p>
                 <div class="social-link">
                     <ul>
@@ -125,7 +125,7 @@
             <div class="col span_1_of_4 box">
                 <img src="/assets/images/aaa12.png" alt="newaz" class="team-member">
                 <h3>SHAHNEWAZ</h3>
-                <span class="role">CEO / Marketing Guru</span>
+                <span class="role">Front-end Developer</span>
                 <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes.</p>
                 <div class="social-link">
                     <ul>
@@ -138,7 +138,7 @@
             <div class="col span_1_of_4 box">
                 <img src="/assets/images/aaa12.png" alt="newaz" class="team-member">
                 <h3>SHAHNEWAZ</h3>
-                <span class="role">CEO / Marketing Guru</span>
+                <span class="role">Front-end Developer</span>
                 <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes.</p>
                 <div class="social-link">
                     <ul>
@@ -152,7 +152,7 @@
             <div class="col span_1_of_4 box">
                 <img src="/assets/images/aaa12.png" alt="newaz" class="team-member">
                 <h3>SHAHNEWAZ</h3>
-                <span class="role">CEO / Marketing Guru</span>
+                <span class="role">Front-end Developer</span>
                 <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes.</p>
                 <div class="social-link">
                     <ul>
@@ -268,7 +268,7 @@
                 <div class="client-review">
                     <p>“Nullam dapibus blandit orci, viverra gravida dui lobortis eget. Maecenas fringilla urna eu nisl scelerisque.”</p>
                     <h3>SHAHNEWAZ KHONDOKAR</h3>
-                    <span class="role">CEO of Pinterest</span>
+                    <span class="role">Front-end Developer</span>
                 </div>
             </div>
             <div class="col span_1_of_2 box">
@@ -278,7 +278,7 @@
                 <div class="client-review">
                     <p>“Nullam dapibus blandit orci, viverra gravida dui lobortis eget. Maecenas fringilla urna eu nisl scelerisque.”</p>
                     <h3>SHAHNEWAZ KHONDOKAR</h3>
-                    <span class="role">CEO of Pinterest</span>
+                    <span class="role">Front-end Developer</span>
                 </div>
             </div>
             <div class="col span_1_of_2 box">
@@ -288,7 +288,7 @@
                 <div class="client-review">
                     <p>“Nullam dapibus blandit orci, viverra gravida dui lobortis eget. Maecenas fringilla urna eu nisl scelerisque.”</p>
                     <h3>SHAHNEWAZ KHONDOKAR</h3>
-                    <span class="role">CEO of Pinterest</span>
+                    <span class="role">Front-end Developer</span>
                 </div>
             </div>
             <div class="col span_1_of_2 box">
@@ -298,7 +298,7 @@
                 <div class="client-review">
                     <p>“Nullam dapibus blandit orci, viverra gravida dui lobortis eget. Maecenas fringilla urna eu nisl scelerisque.”</p>
                     <h3>SHAHNEWAZ KHONDOKAR</h3>
-                    <span class="role">CEO of Pinterest</span>
+                    <span class="role">Front-end Developer</span>
                 </div>
             </div>
         </div>
